# game-excellent

./: CMakeLists.txt  README.md
resources/data/loader/: sprites.conf
source/: main.cpp
source/levels/: gamelevel.cpp  gamelevel.h
